trying fixing build problem on Mac

--- a/src/flisp/Makefile
+++ b/src/flisp/Makefile
@@ -36,7 +36,7 @@ LIBFILES_release := $(LLT_release) $(LIBUV) $(LIBUTF8PROC)
 LIBFILES_debug := $(LLT_debug) $(LIBUV) $(LIBUTF8PROC)
 LIBS :=
 ifneq ($(OS),WINNT)
-LIBS += -lpthread -latomic
+LIBS += -lpthread 
 endif
 
 FLAGS := -I$(LLTSRCDIR) $(JCFLAGS) $(HFILEDIRS:%=-I%) \
